# jaenokhwa

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  make-npm.sh  publish.sh
.github/workflows/: examples.yml  main.yml
.run/: Clippy All.run.xml  Clippy Main Apple.run.xml  Clippy Main Windows.run.xml  JSCam.run.xml
examples/capture/: Cargo.toml
examples/capture/example-capture/example-capture.xcodeproj/xcuserdata/pengg.xcuserdatad/xcschemes/: xcschememanagement.plist
examples/capture/src/: main.rs
examples/convert-to-rgb/: Cargo.toml
examples/convert-to-rgb/src/: main.rs
examples/jscam/: package.json  setup.sh
examples/jscam/src/: index.html  index.js
examples/threaded-capture/: Cargo.toml
examples/threaded-capture/src/: main.rs
jaenokhwa-bindings-linux/: Cargo.toml  README.md
jaenokhwa-bindings-linux/src/: lib.rs
jaenokhwa-bindings-macos/: .gitignore  Cargo.toml  README.md  build.rs
jaenokhwa-bindings-macos/src/: lib.rs
jaenokhwa-bindings-windows/: Cargo.toml
jaenokhwa-bindings-windows/src/: lib.rs
jaenokhwa-core/: Cargo.toml  README.md
jaenokhwa-core/src/: buffer.rs  error.rs  lib.rs  pixel_format.rs  traits.rs  types.rs
nokhwa-bindings-linux/: Cargo.toml
nokhwa-bindings-linux/src/: lib.rs
nokhwa-bindings-macos/: Cargo.toml
nokhwa-bindings-macos/src/: lib.rs
nokhwa-bindings-windows/: Cargo.toml
nokhwa-bindings-windows/src/: lib.rs
nokhwa-core/: Cargo.toml
nokhwa-core/src/: buffer.rs  error.rs  pixel_format.rs  traits.rs  types.rs
scripts/: build-all-examples.sh  build-all.sh  clippy-all-examples.sh  make-npm.sh  publish-all.sh  publish.sh  set-windows-msvc.sh
src/: camera.rs  convert_to_rgb.rs  js_camera.rs  lib.rs  query.rs  threaded.rs
src/backends/: mod.rs
src/backends/capture/: avfoundation.rs  mod.rs  msmf_backend.rs  network_camera.rs
tests/: macos.rs
