[package]
name = "jaenokhwa"
version = "0.11.0"
authors = ["Alex Hayton", "l1npengtul <l1npengtul@protonmail.com>", "The Jaenokhwa Contributors"]
edition = "2021"
description = "An easy-to-use, cross-platform Rust Webcam Capture Library for native and WASM"
keywords = ["camera", "webcam", "capture", "cross-platform", "ios", "avfoundation", "media-foundation", "objc", "v4l", "wasm"]
categories = ["api-bindings", "multimedia", "os", "web-programming"]
license = "Apache-2.0"
repository = "https://github.com/AlexHayton/jaenokhwa"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["jaenokhwa-bindings-macos", "jaenokhwa-bindings-windows", "jaenokhwa-bindings-linux", "jaenokhwa-core", "examples/*"]
exclude = ["examples/jscam"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["flume", "input-native", "output-convert-to-rgb"]
serialize = ["serde", "jaenokhwa-core/serialize", "four-cc/serde"]
input-avfoundation = ["jaenokhwa-bindings-macos"]
input-msmf = ["jaenokhwa-bindings-windows"]
input-v4l = ["jaenokhwa-bindings-linux"]
input-native = ["input-avfoundation", "input-v4l", "input-msmf"]
input-jscam = ["web-sys", "js-sys", "wasm-bindgen-futures", "wasm-bindgen", "wasm-rs-async-executor"]
# output-wasm = ["input-jscam"]
output-threaded = []
output-convert-to-rgb = ["ffmpeg-next"]
docs-only = ["input-native", "input-jscam", "output-threaded", "serialize"]
docs-nolink = ["jaenokhwa-core/docs-features"]
docs-features = []
test-fail-warning = []

[dependencies]
thiserror = "1.0"
paste = "1.0"
four-cc = "0.4.0"

[patch.crates-io]
ffmpeg-sys-next = { git = "https://github.com/AlexHayton/rust-ffmpeg-sys.git" }
four-cc = { git = "https://github.com/AlexHayton/four-cc.git" }
core-video = { git = "https://github.com/AlexHayton/core-video-rs.git" }
av-foundation = { git = "https://github.com/AlexHayton/av-foundation-rs.git" }

[dependencies.jaenokhwa-core]
version = "0.1.0"
path = "jaenokhwa-core"

[dependencies.serde]
version = "1.0"
optional = true

[dependencies.flume]
version = "0.11"
optional = true

[dependencies.image]
version = "0.25"
default-features = false

[dependencies.ffmpeg-next]
version = "7.0.2"
optional = true
default-features = false
features = ["software-scaling", "build", "format"]

[dependencies.v4l]
version = "0.14"
optional = true

[dependencies.jaenokhwa-bindings-windows]
version = "0.4.0"
path = "jaenokhwa-bindings-windows"
optional = true

[dependencies.jaenokhwa-bindings-macos]
version = "0.2.0"
path = "jaenokhwa-bindings-macos"
optional = true

[dependencies.jaenokhwa-bindings-linux]
version = "0.1.0"
path = "jaenokhwa-bindings-linux"
optional = true

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "CanvasRenderingContext2d",
    "CssStyleDeclaration",
    "Document",
    "Element",
    "HtmlElement", "HtmlVideoElement", "HtmlCanvasElement",
    "ImageData",
    "MediaDevices", "MediaDeviceInfo", "MediaDeviceKind", "MediaStreamConstraints", "MediaTrackSupportedConstraints", "MediaStream", "MediaStreamTrack", "MediaTrackSettings", "MediaTrackConstraints", "MediaStreamTrackState",
    "MimeType", "MimeTypeArray",
    "Navigator",
    "Node",
    "Permissions", "PermissionDescriptor", "PermissionState", "PermissionStatus",
    "Plugin", "PluginArray",
    "Window"
]
optional = true

[dependencies.js-sys]
version = "0.3"
optional = true

[dependencies.wasm-bindgen]
version = "0.2"
optional = true

[dependencies.wasm-bindgen-futures]
version = "0.4"
optional = true

[dependencies.wasm-rs-async-executor]
version = "0.9"
optional = true

[package.metadata.docs.rs]
features = ["docs-only", "docs-nolink", "docs-features"]
