[package]
name = "jaenokhwa-bindings-macos"
version = "0.2.0"
edition = "2021"
authors = ["Alex Hayton", "l1npengtul <l1npengtul@protonmail.com>", "The Jaenokhwa Contributors"]
license = "Apache-2.0"
repository = "https://github.com/AlexHayton/jaenokhwa"
description = "The AVFoundation bindings crate for `nokhwa`"
keywords = ["avfoundation", "macos", "capture", "webcam"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.jaenokhwa-core]
version = "0.1.0"
path = "../jaenokhwa-core"

[dependencies]
four-cc-nokhwa = "0.4.0"

[target.'cfg(any(target_os="macos",target_os="ios"))'.dependencies]
av-foundation = "0.3.0"
block = "0.1"
core-foundation = { version = "0.9"}
core-media = { version = "0.4", default-features = false, features = ["objc"] }
core-video = { version = "0.3.1", default-features = false, features = ["objc"] }
dispatch2 = "0.1.0"
flume = "0.11.0"
objc2 = "0.5.2"
objc2-foundation = { version = "0.2.2", features = ["NSGeometry"] }
once_cell = "1.16"
