[package]
name = "jaenokhwa-bindings-windows"
version = "0.4.0"
authors = ["Alex Hayton", "l1npengtul <l1npengtul@protonmail.com>", "The Jaenokhwa Contributors"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/AlexHayton/jaenokhwa"
description = "The Windows Media Foundation bindings crate for `nokhwa`"
keywords = ["media-foundation", "windows", "capture", "webcam"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
docs-only = []

[dependencies]
four-cc = { git = "https://github.com/AlexHayton/four-cc.git", version = "0.4.0" }

[dependencies.jaenokhwa-core]
version = "0.1.0"
path = "../jaenokhwa-core"

[target.'cfg(target_os="windows")'.dependencies.windows]
version = "0.43"
features = ["Win32_Media_MediaFoundation", "Win32_System_Com", "Win32_Foundation", "Win32_Media_DirectShow", "Win32_Media", "Win32", "Win32_Media_KernelStreaming"]

[target.'cfg(target_os="windows")'.dependencies.once_cell]
version = "1.16"