[package]
name = "jaenokhwa-core"
version = "0.1.0"
authors = ["l1npengtul <l1npengtul@protonmail.com>"]
edition = "2021"
description = "Core type definitions for nokhwa"
keywords = ["camera", "webcam", "capture", "cross-platform"]
license = "Apache-2.0"
repository = "https://github.com/l1npengtul/nokhwa"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
serialize = ["serde"]
docs-features = ["serialize"]
test-fail-warnings = []

[dependencies]
thiserror = "1.0"
bytes = "1.3"
four-cc = "0.4"

[dependencies.image]
version = "0.25"
default-features = false

[dependencies.serde]
version = "1.0"
features = ["derive"]
optional = true

[package.metadata.docs.rs]
features = ["docs-features"]
