[package]
name = "nokhwa-bindings-macos"
version = "0.2.0"
edition = "2021"
authors = ["l1npengtul"]
license = "Apache-2.0"
repository = "https://github.com/l1npengtul/nokhwa"
description = "The AVFoundation bindings crate for `nokhwa`"
keywords = ["avfoundation", "macos", "capture", "webcam"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.nokhwa-core]
version = "0.1.0"
path = "../nokhwa-core"

[dependencies]
four-cc = "0.4.0"

[target.'cfg(any(target_os="macos",target_os="ios"))'.dependencies]
core-media = "0.4.0"
core-video = "0.3.1"
objc2 = "0.5.2"
objc2-foundation = "0.2.2"
av-foundation = "0.3.0"
block = "0.1"
flume = "0.11.0"
once_cell = "1.16"
