[package]
name = "jaenokhwactl"
version = "0.10.0"
authors = ["Alex Hayton", "l1npengtul <l1npengtul@protonmail.com>", "The Jaenokhwa Contributors"]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["jaenokhwa/default"]

[dependencies]
four-cc = "0.4"
ggez = "0.9.3"
flume = "0.11"
once_cell = "1.16.0"
color-eyre = "0.6.2"

[dependencies.clap]
version = "4.0.20"
features = ["derive"]

# Use these as you need
[dependencies.jaenokhwa]
path = "../.."
features = ["input-native", "output-threaded"]

[dependencies.image]
version = "0.25"
features = ["png"]
