[package]
name = "threaded-capture"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
four-cc-nokhwa = "0.4.0"

[dependencies.image]
version = "0.25"
default-features = false

[dependencies.jaenokhwa]
path = "../.."
# EDIT THIS!
features = ["input-native", "output-threaded"]
